# fast-api-common-test-rv

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: fast-api-common-lint-and-test.yml  fast-api-common-version.yml
fastapi_common/auth/: README.md  __init__.py  dependencies.py  mock_bearer.py  oauth_bearer.py
fastapi_common/auth/models/: __init__.py  bearer_credentials.py  jwk.py  jwt_credentials.py  openid_configuration.py  settings.py  standard_claims.py
fastapi_common/logging/: README.md  __init__.py  logger.py  middleware.py  timed.py
tests/: auth_test.py
